src/etc/piguard/config/iptables.04-filter.conf
-A LOGGING_ACCEPT_PROTOCOL -j LOG --log-prefix "ACTION=ACCEPT_PROTOCOL "
-A LOGGING_ACCEPT_PROTOCOL -j ACCEPT

-A LOGGING_ACCEPT_PORT -j LOG --log-prefix "ACTION=ACCEPT_PORT "
-A LOGGING_ACCEPT_PORT -j ACCEPT

-A LOGGING_ACCEPT_STRING -j LOG --log-prefix "ACTION=ACCEPT_STRING "
-A LOGGING_ACCEPT_STRING -j ACCEPT

-A LOGGING_ACCEPT_IP -j LOG --log-prefix "ACTION=ACCEPT_IP "
-A LOGGING_ACCEPT_IP -j ACCEPT

-A LOGGING_DROP_DOH -j LOG --log-prefix "ACTION=DROP_DOH "
-A LOGGING_DROP_DOH -j DROP

-A LOGGING_DROP_PROTOCOL -j LOG --log-prefix "ACTION=DROP_PROTOCOL "
-A LOGGING_DROP_PROTOCOL -j DROP

-A LOGGING_DROP_PORT -j LOG --log-prefix "ACTION=DROP_PORT "
-A LOGGING_DROP_PORT -j DROP

-A LOGGING_DROP_STRING -j LOG --log-prefix "ACTION=DROP_STRING "
-A LOGGING_DROP_STRING -j DROP

-A LOGGING_DROP_IP -j LOG --log-prefix "ACTION=DROP_IP "
-A LOGGING_DROP_IP -j DROP

COMMIT
